check for oc auto deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8082
 database.name=MySql
 
 spring.datasource.username = myuser
-spring.datasource.url = ${DB_URL}
+spring.datasource.url = test
 # jdbc:mysql://docker-mysql/mydb
