webhooks without Docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-database.name=MySql
+database.name=MySqlDev
 
 spring.datasource.username = myuser
 spring.datasource.url =  jdbc:mysql://docker-mysql/mydb
