--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ database.name=MySqlDev
 spring.datasource.username = myuser
 spring.datasource.url =  jdbc:mysql://docker-mysql/mydb
 # jdbc:mysql://docker-mysql/mydb
+
+## server.port= 8081 not used for oc
