--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 database.name=MySqlDev
 
 spring.datasource.username = myuser
-spring.datasource.url =  jdbc:mysql://docker-mysql/mydb
+spring.datasource.url =cahnged with Kaveh  jdbc:mysql://docker-mysql/mydb
 # jdbc:mysql://docker-mysql/mydb
 
-## server.port= 8081 not used for oc
+## server.port= 8081 not used for ocd
