update prop file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 database.name=MySqlDev
 
-spring.datasource.username = myuser
-spring.datasource.url =cahnged with Kaveh  jdbc:mysql://docker-mysql/mydb
+spring.datasource.username =${db_user}
+spring.datasource.url =${db_url}
 # jdbc:mysql://docker-mysql/mydb
 
 ## server.port= 8081 not used for ocd
